Changes to footer, fixed score pages, added contact

--- a/pages/scoresLOI.html
+++ b/pages/scoresLOI.html
@@ -18,6 +18,10 @@
         </div>
     </div>
 
+    <div class="">
+        <h2>Please Note, LOI Games Take Place on Fridays and Mondays. If No Games are Displayed, Please Refer to the Fixtures & Results Page  </h2>
+    </div>
+
     <div class="container">
         <h1>Live Scores</h1>
         <div class="title-box">
@@ -43,7 +47,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="footer1">
         <a href="contact.html"><i class="fa-solid fa-message"></i> Contact</a>
         <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i> LinkedIn</a>
         <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i> Github</a>
@@ -53,6 +57,6 @@
     </footer>
 
 
-     <script src="scores.js"></script>
+     <script src="scoresLOI.js"></script>
 </body>
 </html>
