--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>League of Ireland Results and FIxtures</title>
+    <title>Fixtures & Results 2022</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/532c5c6ff3.js" crossorigin="anonymous"></script>
 </head>
@@ -40,17 +40,16 @@
     class="api_football_loader">
     </div>
 
-    <div class="footer">
-        <div class="inner_footer">
-            <div class="logo_containter">
-                <img src="/image/LOI image.png" class="loi_image" alt="" srcset="">
-            </div>
-            <div class="footer_third">
-                <h1>Need Help?</h1>
-                <a href="">Support</a>
-            </div>
-        </div>
-    </div>
+
+
+    <footer class="footer">
+        <a href="contact.html"><i class="fa-solid fa-message"></i> Contact</a>
+        <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i> LinkedIn</a>
+        <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i> Github</a>
+        <p>
+            © Andrew English 2022. All rights reserved.
+        </p>
+    </footer>
 
 <script type="module" src="https://widgets.api-sports.io/football/1.1.8/widget.js"></script>
 <script src="//code.tidio.co/4scsvjlljx8ajpazamscxbn5yco2yg00.js" async></script>
