--- a/pages/table21.html
+++ b/pages/table21.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>League of Ireland League Table</title>
+    <title>League Table 2021</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/532c5c6ff3.js" crossorigin="anonymous"></script>
 </head>
@@ -33,6 +33,16 @@
      data-theme=""
      data-show-errors="false"
      class="api_football_loader"></div>
+
+     <footer class="footer1">
+        <a href="contact.html"><i class="fa-solid fa-message"></i> Contact</a>
+        <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i> LinkedIn</a>
+        <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i> Github</a>
+        <p>
+            © Andrew English 2022. All rights reserved.
+        </p>
+    </footer>
+    
 <script
     type="module"
     src="https://widgets.api-sports.io/football/1.1.8/widget.js">
