Made changes to Live Scores page

--- a/pages/scores.html
+++ b/pages/scores.html
@@ -18,6 +18,11 @@
         </div>
     </div>
 
+    <div class ="scores_button">
+        <a href="scoresLOI.html"><i class="fa-solid fa-satellite-dish"></i> LOI Live Scores</a>
+        <a href="scores.html"><i class="fa-solid fa-satellite-dish"></i> World Live Scores</a>
+    </div>
+
     <div class="container">
         <h1>Live Scores</h1>
         <div class="title-box">
@@ -39,7 +44,7 @@
         </div>
         <hr>
         <div id="matchTable" class="matches-table">
-
+            
         </div>
     </div>
 
