--- a/pages/scoresLOI.html
+++ b/pages/scoresLOI.html
@@ -18,8 +18,9 @@
         </div>
     </div>
 
-    <div class="">
-        <h2>Please Note, LOI Games Take Place on Fridays and Mondays. If No Games are Displayed, Please Refer to the Fixtures & Results Page  </h2>
+    <div class ="scores_button">
+        <a href="scoresLOI.html"><i class="fa-solid fa-satellite-dish"></i> LOI Live Scores</a>
+        <a href="scores.html"><i class="fa-solid fa-satellite-dish"></i> World Live Scores</a>
     </div>
 
     <div class="container">
@@ -45,6 +46,12 @@
         <div id="matchTable" class="matches-table">
 
         </div>
+    </div>
+
+    <div class="loi-scores">
+        <h2>Please Note, LOI Games Take Place on Friday and Monday Evenings. If No Games are Displayed, Please Refer to the 
+            Fixtures & Results Page. Alternatively, you can Check out Live Scores from all Across the World in World Live 
+            Scores Page. </h2>
     </div>
 
     <footer class="footer1">
