--- a/pages/table.html
+++ b/pages/table.html
@@ -38,7 +38,7 @@
      data-show-errors="false"
      class="api_football_loader"></div>
 
-
+     <!-- Footer with links to personal profiles on Github and LinkedIn along with a contact page-->
      <footer class="footer1">
         <a href="contact.html"><i class="fa-solid fa-message"></i> Contact</a>
         <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i> LinkedIn</a>
