--- a/pages/index.html
+++ b/pages/index.html
@@ -1,3 +1,4 @@
+<!-- Home page which is the current fixture list for the 2022 season. Includes scores of matches already played.-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,24 +12,24 @@
 </head>
 <body>
 
+    <!-- Creates the header that displays on the top left of each page-->
     <div class ="header">
         <a href="index.html"><i class="fa-regular fa-futbol"></i> Fixtures & Results</a>
         <a href="scores.html"><i class="fa-solid fa-satellite-dish"></i> Live Scores</a>
         <a href="table.html"><i class="fa-solid fa-trophy"></i></i> League Table</a>
         <div class="header-right">
             <a href="http://localhost:3000"><i class="fa-regular fa-user"></i> Login</a>
-            
         </div>
-
-        
     </div>
 
+    <!-- Creates the options for previous fixtures and results-->
     <div class ="results_button">
         <a href="results19.html"><i class="fa-solid fa-table-cells"></i> Results 2019</a>
         <a href="results20.html"><i class="fa-solid fa-table-cells"></i> Results 2020</a>
         <a href="results21.html"><i class="fa-solid fa-table-cells"></i> Results 2021</a>
     </div>
 
+    <!-- Widget for fixtures and results. Incorporated from API Sports. -->
     <div id="wg-api-football-fixtures"
     data-host="v3.football.api-sports.io"
     data-refresh="60"
@@ -45,7 +46,7 @@
     </div>
 
 
-
+    <!-- Footer with links to personal profiles on Github and LinkedIn along with a contact page-->
     <footer class="footer">
         <a href="contact.html"><i class="fa-solid fa-message"></i> Contact</a>
         <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i> LinkedIn</a>
@@ -55,6 +56,7 @@
         </p>
     </footer>
 
+<!--Script part of the league table widgit from API Sports. Also includes script for live chat box.-->
 <script type="module" src="https://widgets.api-sports.io/football/1.1.8/widget.js"></script>
 <script src="//code.tidio.co/4scsvjlljx8ajpazamscxbn5yco2yg00.js" async></script>
 </body>
