--- a/pages/scores.html
+++ b/pages/scores.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>League of Ireland Live Scores</title>
+    <title>World Live Scores</title>
     <!-- Irish flag favicon image for a range of sites. Displays on tab.-->
     <link rel="apple-touch-icon" sizes="180x180" href="/image/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/image/favicon-32x32.png">
